# evrmem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.yaml  evrmem.bat  evrmem.sh  mkdocs.yml  pyproject.toml  requirements.txt
.clawhub/: SKILL.md
.github/workflows/: deploy-pages.yml
docs/: DEVELOPMENT.md  api.md  cli.md  config.md  index.md  install.md  quickstart.md
openclaw-skill/: SKILL.md
src/qmd/: __init__.py  __main__.py  cli.py
src/qmd/commands/: __init__.py
src/qmd/core/: config.py  embedding.py  vector_db.py
src/qmd/utils/: __init__.py  console.py
